Added basic html

--- a/htmlOne.html
+++ b/htmlOne.html
@@ -1,14 +1,23 @@
 <html>
+<head>
 	<title>
-			<h1>
-				best webpage ever
-			</h1>
+			best webpage ever
 	</title>
+</head>
 
 <body>
-	<h5>
-		get outta here
-	</h5>
+		this is is <strong>bold</strong><br>
+		this is <em>italics</em><br>
+		hey look at this sexy <a href="http://images.thecarconnection.com/lrg/ferrari_100420855_l.jpg"> car </a><br> 
+		
+		<strong>nice</strong> </a> huh?
+		<p>
+			something imporant
+		</p>
+		<ul>
+			<li>important stuff 1</li>
+			<li>more inportant stuff</li>
+		</ul>
 </body>
 
 
