Added 'page 2' and 'page 3'

--- a/page3.html
+++ b/page3.html
@@ -1,7 +1,8 @@
+<!doctype html>
 <html>
 <head>
 	<title>
-			best webpage ever
+			Page 3
 	</title>
 </head>
 
@@ -12,8 +13,8 @@
 		
 		<strong>nice</strong> </a> huh?
 		<p>
-			something imporant
-		</p>
+			<h1>Page 3</h1>
+		</p>		
 		<ul>
 			<li>important stuff 1</li>
 			<li>more inportant stuff</li>
