Added css styles

--- a/index.html
+++ b/index.html
@@ -1,23 +1,24 @@
 <!doctype html>
 <html>
 <head>
-	<title>
-			Page One
-	</title>
+	<title>Page One</title>
+	<link href="main.css" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
 	<h1>My Website</h1>
 	<ul>
-		<li><a href="index.html">Home</a></li>
+		<li>Home</li>
 		<li><a href="page2.html">Page 2</a></li>
 		<li><a href="page3.html">Page3<a/></li>
 	</ul>
 		<p>
-			something imporant
+			<h1>Homepage</h1>
 		</p>
 		<ul>
 			<li>important stuff 1</li>
+			<li class="secondary">more inportant stuff</li>
+			<li id="special">important stuff 1</li>
 			<li>more inportant stuff</li>
 		</ul>
 </body>
