--- a/page3.html
+++ b/page3.html
@@ -1,21 +1,27 @@
 <!doctype html>
 <html>
 <head>
-	<title>
-			Page 3
-	</title>
+	<title>Page 3</title>
+	<link href="main.css" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
+	<p>
+			<h1>Page 3</h1>
+	</p>
 		this is is <strong>bold</strong><br>
 		this is <em>italics</em><br>
 		hey look at this sexy <a href="http://images.thecarconnection.com/lrg/ferrari_100420855_l.jpg"> car </a><br> 
 		
-		<strong>nice</strong> </a> huh?
-		<p>
-			<h1>Page 3</h1>
-		</p>		
+		<strong>nice</strong> </a> huh?		
 		<ul>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="page2.html">Page 2</a></li>
+			<li>Page3</li>
+	</ul>
+		<ul>
+			<li>important stuff 1</li>
+			<li>more inportant stuff</li>
 			<li>important stuff 1</li>
 			<li>more inportant stuff</li>
 		</ul>
