--- a/index.html
+++ b/index.html
@@ -1,27 +1,80 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
-	<title>Page One</title>
-	<link href="main.css" rel="stylesheet" type="text/css"/>
+	<title>Bootstrap Layouts</title>
+	<link rel="stylesheet" href="main.css">
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
 </head>
-
 <body>
-	<h1>My Website</h1>
-	<ul>
-		<li>Home</li>
-		<li><a href="page2.html">Page 2</a></li>
-		<li><a href="page3.html">Page3<a/></li>
-	</ul>
-		<p>
-			<h1>Homepage</h1>
-		</p>
-		<ul>
-			<li>important stuff 1</li>
-			<li class="secondary">more inportant stuff</li>
-			<li id="special">important stuff 1</li>
-			<li>more inportant stuff</li>
-		</ul>
-</body>
+	<header class="navbar-inverse">
+		<div class="container">
+			<nav class="navbar navbar-inverse">
+				<div class="container-fluid">
+					<!-- Brand and toggle get grouped for better mobile display -->
+					<div class="navbar-header">
+						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+							<span class="sr-only">Toggle navigation</span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						</button>
+						<a class="navbar-brand" href="#">Brand</a>
+					</div>
 
-
-</html>
+					<!-- Collect the nav links, forms, and other content for toggling -->
+					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+						<ul class="nav navbar-nav">
+							<li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+							<li><a href="#">Link</a></li>
+							<li class="dropdown">
+								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+								<ul class="dropdown-menu" role="menu">
+									<li><a href="#">Action</a></li>
+									<li><a href="#">Another action</a></li>
+									<li><a href="#">Something else here</a></li>
+									<li class="divider"></li>
+									<li><a href="#">Separated link</a></li>
+									<li class="divider"></li>
+									<li><a href="#">One more separated link</a></li>
+								</ul>
+							</li>
+						</ul>
+						<ton type="submit" class="btn btn-default">Submit</button>
+						</form>
+					</div><!-- /.navbar-collapse -->
+				</div><!-- /.container-fluid -->
+			</nav>
+		</div>
+	</header>
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-6 col-xs-12">
+				<div class="panel panel-primary">
+					<div class="panel-heading">Widget 1</div>
+					<div class="panel-body">
+						<a href="#" class="btn btn-primary">does something</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-3 col-xs-6">
+				<div class="panel panel-default">
+					<div class="panel-heading">Widget 2</div>
+					<div class="panel-body text-success">
+						Panel content
+					</div>
+				</div>
+				<div class="col-sm-3 col-xs-6">
+					<div class="panel panel-default">
+						<div class="panel-heading">Widget 3</div>
+						<div class="panel-body">
+							Panel content
+						</div>
+					</div>
+				</div>
+			</div>
+		</body>
+		</html>
